[package]
name = "tu_scale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
image = "0.24.3"
reqwest = {version = "0.11.11", features = ["blocking"]}

[profile.release]
lto = true
codegen-units = 1
panic = "abort"